correct video_play_icon mobile 375px

--- a/css/media.css
+++ b/css/media.css
@@ -636,7 +636,7 @@
     .video_play-icon {
         width: 37px;
         height: 37px;
-        bottom: 224px;
+        bottom: 112px;
     }
     
     .video_play-triangle {
